<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
  <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="match_parent" android:background="@color/background_color"
          android:gravity="center_horizontal" android:padding="5dp">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="147dp" android:id="@+id/textView" android:text="@string/app_name"
            android:textSize="48sp" android:gravity="center|center_horizontal"
            android:textColor="@color/label_color" android:fontFamily="@font/bad_script" android:paddingTop="35dp"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="61dp"/>
    <TextView
            android:text="@string/lbl_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView4" android:hint="@string/txt_mail"
            android:textColor="@color/label_color"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_mail" android:hint="@string/txt_mail"
            android:textColor="@color/label_color"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp" android:textColorHint="@color/hint_color"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="27dp"/>
    <TextView
            android:text="@string/lbl_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:textColor="@color/label_color"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txt_pass" android:hint="@string/txt_pass"
            android:textColor="@color/label_color"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp" android:textColorHint="@color/hint_color"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="18dp"/>
    <Switch
            android:text="@string/swt_remember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/swt_remember" android:textColor="@color/label_color"
            android:gravity="end" android:layout_marginEnd="8dp"/>
    <Button
            android:layout_width="361dp"
            android:layout_height="wrap_content" android:id="@+id/btn_next" android:text="@string/btn_login"
            android:gravity="center|center_horizontal" android:background="@color/button_color"
            android:textColor="@color/label_color" android:layout_marginTop="100dp"/>
    <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>
    <TextView
            android:text="@string/lbl_link_register"
            android:layout_width="match_parent"
            android:layout_height="51dp" android:id="@+id/lbl_record" android:gravity="center"
            android:textColor="@color/label_color"/>
  </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>