<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Home" android:background="@color/background_color">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:background="@color/background_color"
            android:gravity="center_horizontal" android:padding="5dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="147dp" android:id="@+id/textView" android:text="@string/lbl_title_bienvenido"
                android:textSize="48sp" android:gravity="center|center_horizontal"
                android:textColor="@color/label_color" android:fontFamily="@font/bad_script"
                android:paddingTop="35dp"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="56dp" android:id="@+id/lbl_user" android:textColor="@color/label_color"
                android:layout_marginEnd="10dp" android:layout_marginStart="10dp"
                android:fontFamily="@font/bad_script" android:textStyle="bold"
                android:gravity="center_horizontal|center_vertical" android:textSize="24sp"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/lbl_buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4" android:hint="@string/txt_mail"
                android:textColor="@color/label_color"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txt_findCustomer" android:hint="@string/hint_findCustomer"
                android:textColor="@color/label_color"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp" android:textColorHint="@color/hint_color"/>
        <Space
                android:layout_width="match_parent"
                android:layout_height="18dp"/>

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Button
                    android:layout_width="361dp"
                    android:layout_height="wrap_content" android:id="@+id/btn_viewAll"
                    android:text="@string/btn_viewRecord"
                    android:gravity="center|center_horizontal" android:background="@color/button_color"
                    android:textColor="@color/label_color" android:layout_marginTop="30dp"
                    android:layout_weight="1" android:layout_marginEnd="5dp" android:layout_marginStart="10dp"/>
            <Button
                    android:layout_width="361dp"
                    android:layout_height="wrap_content" android:id="@+id/btn_logOut"
                    android:text="@string/btn_logOut"
                    android:gravity="center|center_horizontal" android:background="@color/button_color"
                    android:textColor="@color/label_color" android:layout_marginTop="30dp"
                    android:layout_weight="1" android:layout_marginStart="5dp" android:layout_marginEnd="10dp"/>
        </TableRow>
        <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/lv_listview"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>